--- a/FYP/FYP/FYP.csproj
+++ b/FYP/FYP/FYP.csproj
@@ -145,9 +145,6 @@
     <Compile Include="Models\Department.cs">
       <DependentUpon>FYP_DB_Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Drop_Out.cs">
-      <DependentUpon>FYP_DB_Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Enrolled.cs">
       <DependentUpon>FYP_DB_Model.tt</DependentUpon>
     </Compile>
@@ -371,6 +368,7 @@
     <Content Include="Views\ExamController\ExamCreated.cshtml" />
     <Content Include="Views\ExamController\ExamSchedule.cshtml" />
     <Content Include="Views\ExamController\ExamEnrollment.cshtml" />
+    <Content Include="Views\ExamController\ManageExam.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
