--- a/FYP/FYP/FYP.csproj
+++ b/FYP/FYP/FYP.csproj
@@ -130,8 +130,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ExamControllerController.cs" />
+    <Compile Include="Controllers\ExamResultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ResultController.cs" />
     <Compile Include="Controllers\SuperUserController.cs" />
     <Compile Include="Controllers\TeacherController.cs" />
     <Compile Include="Global.asax.cs">
@@ -287,23 +287,6 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
-    <EntityDeploy Include="Models\FYP_DB_Model.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>FYP_DB_Model.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\FYP_DB_Model.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>FYP_DB_Model.edmx</DependentUpon>
-      <LastGenOutput>FYP_DB_Model.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\FYP_DB_Model.edmx.diagram">
-      <DependentUpon>FYP_DB_Model.edmx</DependentUpon>
-    </Content>
-    <Content Include="Models\FYP_DB_Model.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>FYP_DB_Model.edmx</DependentUpon>
-      <LastGenOutput>FYP_DB_Model.cs</LastGenOutput>
-    </Content>
     <Content Include="Content\bootstrap\wells.less" />
     <Content Include="Content\bootstrap\variables.less" />
     <Content Include="Content\bootstrap\utilities.less" />
@@ -377,6 +360,23 @@
     <Content Include="Content\bootstrap\alerts.less" />
     <Content Include="Content\_bootstrap-datetimepicker.less" />
     <Content Include="Content\bootstrap-datetimepicker-build.less" />
+    <EntityDeploy Include="Models\FYP_DB_Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FYP_DB_Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\FYP_DB_Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FYP_DB_Model.edmx</DependentUpon>
+      <LastGenOutput>FYP_DB_Model.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\FYP_DB_Model.edmx.diagram">
+      <DependentUpon>FYP_DB_Model.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\FYP_DB_Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FYP_DB_Model.edmx</DependentUpon>
+      <LastGenOutput>FYP_DB_Model.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.min.js" />
@@ -460,6 +460,9 @@
     <Content Include="Views\SuperUser\ManageFreezeStudents.cshtml" />
     <Content Include="Views\SuperUser\FreezeStudent.cshtml" />
     <Content Include="Views\SuperUser\UnFreezeStudent.cshtml" />
+    <Content Include="Views\ExamResult\ResultForSuperUser.cshtml" />
+    <Content Include="Views\ExamResult\ResultForExamController.cshtml" />
+    <Content Include="Views\SuperUser\UserImage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
