before adding session and profile

--- a/FYP/FYP/Web.config
+++ b/FYP/FYP/Web.config
@@ -103,6 +103,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="FYP_DB" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=FYP_DB;Integrated Security=True" />
-    <add name="FYP_DB_Entities" connectionString="metadata=res://*/Models.FYP_DB_Model.csdl|res://*/Models.FYP_DB_Model.ssdl|res://*/Models.FYP_DB_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=FYP_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="FYP_DB_Entities" connectionString="metadata=res://*/Models.FYP_DB_Model.csdl|res://*/Models.FYP_DB_Model.ssdl|res://*/Models.FYP_DB_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=FYP_DB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
